# django_naija_geo

./: .gitignore  README.md  __init__.py  apps.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
api/: __init__.py
fixtures/: fixtures.json  lgas.json  states.json  zones.json
management/commands/: load_naija_data.py
migrations/: 0001_initial.py
models/: __init__.py  base.py  lga.py  state.py  ward.py  zone.py
utils/: __init__.py
